2007-11-06  Dan Bernstein  <mitz@apple.com>

        Reviewed by Antti Koivisto and Dave Hyatt.

        - test for <rdar://problem/5582961> Incorrect layout and floating object list corruption when CSS decreases a block's height

        * fast/block/float/overhanging-after-height-decrease.html: Added.
        * platform/mac-leopard/fast/block: Added.
        * platform/mac-leopard/fast/block/float: Added.
        * platform/mac-leopard/fast/block/float/overhanging-after-height-decrease-expected.checksum: Added.
        * platform/mac-leopard/fast/block/float/overhanging-after-height-decrease-expected.png: Added.
        * platform/mac/fast/block/float/overhanging-after-height-decrease-expected.txt: Added.

2007-11-05  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Added test for poster attribute.

        * media/content/abe.png: Added.
        * media/content/greenbox.png: Added.
        * media/video-poster-expected.txt: Added.
        * media/video-poster.html: Added.

2007-11-06  Antti Koivisto  <antti@apple.com>

        Reviewed by Darin.
        
        Tests for media src attribute changes.

        * media/video-src-change-expected.txt: Added.
        * media/video-src-change.html: Added.
        * media/video-src-remove-expected.txt: Added.
        * media/video-src-remove.html: Added.
        * media/video-src-set-expected.txt: Added.
        * media/video-src-set.html: Added.
        * media/video-test.js:

2007-11-06  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=15838
          Incomplete repaint toggling "How you know this person" on Facebook

        * fast/repaint/make-children-non-inline.html: Added.
        * platform/mac/fast/repaint/make-children-non-inline-expected.txt: Added.
        * platform/mac-leopard/fast/repaint: Added.
        * platform/mac-leopard/fast/repaint/make-children-non-inline-expected.checksum: Added.