@@ -1,3 +1,15 @@
+2007-11-06  Justin Garcia  <justin.garcia@apple.com>
+
+        Reviewed by Darin Adler.
+        
+        <rdar://problem/5576619> REGRESSION: Caret disappears after deleting the last character in inline hole (15714)
+
+        * platform/mac/editing/input/5576619-expected.checksum: Added.
+        * platform/mac/editing/input/5576619-expected.png: Added.
+        * platform/mac/editing/input/5576619-expected.txt: Added.
+        * platform/mac/editing/input/5576619.html: Added.
+        * platform/mac/editing/input/text-input-controller-expected.txt:
+
 2007-11-06  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Antti Koivisto and Dave Hyatt.
